fixed title page spacing

--- a/custom.css
+++ b/custom.css
@@ -176,9 +176,9 @@ a, a > code {
   right: 30px;
   font-family: 'Nunito Sans', sans-serif;
 }
-#andrea-bringhurst-and-Joy-Lindsay {
+#andrea-bringhurst-and-joy-lindsay {
   position: fixed;
-  bottom: 40px;
+  bottom: 40px; 
   right:32px;
 }
 .title-slide {
